; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_dectodbl.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_dectodbl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ECPG_INFORMIX_OUT_OF_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dectodbl(i32* %0, double* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca double*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store double* %1, double** %5, align 8
  %8 = call i32* (...) @PGTYPESnumeric_new()
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @ECPG_INFORMIX_OUT_OF_MEMORY, align 4
  store i32 %12, i32* %3, align 4
  br label %29

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i64 @PGTYPESnumeric_from_decimal(i32* %14, i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %13
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @PGTYPESnumeric_free(i32* %19)
  %21 = load i32, i32* @ECPG_INFORMIX_OUT_OF_MEMORY, align 4
  store i32 %21, i32* %3, align 4
  br label %29

22:                                               ; preds = %13
  %23 = load i32*, i32** %7, align 8
  %24 = load double*, double** %5, align 8
  %25 = call i32 @PGTYPESnumeric_to_double(i32* %23, double* %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @PGTYPESnumeric_free(i32* %26)
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %22, %18, %11
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32* @PGTYPESnumeric_new(...) #1

declare dso_local i64 @PGTYPESnumeric_from_decimal(i32*, i32*) #1

declare dso_local i32 @PGTYPESnumeric_free(i32*) #1

declare dso_local i32 @PGTYPESnumeric_to_double(i32*, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
